2005-06-30 Peter Bienstman  <Peter.Bienstman@UGent.be>

	* generalslab.cpp: Make more standards compliant.

2005-01-28 Peter Debackere  <Peter.Debakcere@UGent.be>

	* generalslab.cpp: Add eta_ASR parameter.
	* generalslab.h: Ditto.

2005-01-26 Peter Bienstman  <Peter.Bienstman@UGent.be>

	* generalslab.cpp: Add support for mirrored slab detection.
	* generalslab.h: Ditto.
	* slabmatrixcache.cpp: Ditto.

2005-01-26 Peter Bienstman  <Peter.Bienstman@UGent.be>

	* slab.cpp: Improve detection of same materials.

2004-08-18 Peter Bienstman  <Peter.Bienstman@UGent.be>

	* slabmatrixcache.cpp: Write to text file.

2004-08-18 Peter Bienstman  <Peter.Bienstman@UGent.be>

	* slabmatrixcache.cpp: Add possibility to write out overlap 
	                       matrices for Davy.

2003-11-14 Peter Bienstman  <Peter.Bienstman@UGent.be>

	* generalslab.h: Add add_kz2_estimate.
	* generalslab.cpp: Ditto.

2003-07-11 Peter Bienstman  <Peter.Bienstman@UGent.be>

	* generalslab.cpp: Relax tolerance on remove_copies.

2003-01-17 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* generalslab.h: Constructors for series solver.
	* generalslab.cpp: Ditto.

2003-01-17 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* generalslab.h: Make disc_intersect const.
	* generalslab.cpp: Ditto.

2002-12-20 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* generalslab.cpp: Break out signed_sqrt to slabmode.

2002-12-12 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* generalslab.cpp: Apply signed_sqrt to kz, not to cos.

2002-11-27 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* generalslab.h: Add eps_avg.

2002-10-30 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* generalslab.cpp: Rename left/right to lower/upper.
	* generalslab.h: Ditto.

2002-09-20 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slabmatrixcache.h: Refactor to be useful in Section.
	* slabmatrixcache.cpp: Ditto.
	* generalslab.h: Ditto.
	* generalslab.cpp: Ditto.

2002-07-15 Peter Bienstman  <Peter.Bienstman@rug.ac.be>
