@@ -1,3 +1,10 @@
+2005-11-29 Peter Debackere  <Peter.Debakcere@UGent.be>
+
+	* generalslab.cpp: Add option to calculate dispersion relation 
+           using kt in different medium.
+	* generalslab.h: Ditto.
+	* slabmatrixcache.cpp: Ditto.
+
 2005-06-30 Peter Bienstman  <Peter.Bienstman@UGent.be>
 
 	* generalslab.cpp: Make more standards compliant.
